--- a/Gráficos/Dor no Coração por Região e Estado.ipynb
+++ b/Gráficos/Dor no Coração por Região e Estado.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -22,19 +22,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\llays\\AppData\\Local\\Temp\\ipykernel_20804\\3940278298.py:13: SettingWithCopyWarning: \n",
+      "C:\\Users\\llays\\AppData\\Local\\Temp\\ipykernel_1380\\2608508284.py:13: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  dornocoracao['Q06306'] = pd.to_numeric(dornocoracao['Q06306'], errors='coerce')\n",
-      "C:\\Users\\llays\\AppData\\Local\\Temp\\ipykernel_20804\\3940278298.py:63: SettingWithCopyWarning: \n",
+      "C:\\Users\\llays\\AppData\\Local\\Temp\\ipykernel_1380\\2608508284.py:63: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  dornocoracao_limpo['V0001'] = dornocoracao_limpo['V0001'].map(mapeamento_estados)\n",
-      "C:\\Users\\llays\\AppData\\Local\\Temp\\ipykernel_20804\\3940278298.py:72: SettingWithCopyWarning: \n",
+      "C:\\Users\\llays\\AppData\\Local\\Temp\\ipykernel_1380\\2608508284.py:72: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -49,7 +49,7 @@
     "import os\n",
     "\n",
     "# Carregar o arquivo CSV\n",
-    "df = pd.read_csv('pns2019.csv', usecols=['V0001', 'Q06306', 'Q064'])\n",
+    "df = pd.read_csv(r'C:\\Users\\llays\\OneDrive\\Documentos\\GitHub\\DoencasCardiacas\\PNS2019\\pns2019.csv', usecols=['V0001', 'Q06306', 'Q064'])\n",
     "\n",
     "# Selecionar colunas específicas\n",
     "colunas_selecionadas = ['V0001', 'Q06306']\n",
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -277,8 +277,7 @@
     }
    ],
    "source": [
-    "# Agrupar por região (usando a coluna 'V0001' como região, já que não há uma coluna 'Região')\n",
-    "# Aqui, estou assumindo que 'V0001' já foi mapeado para nomes de estados\n",
+    "# Agrupar por região \n",
     "contagem_doenca_regiao = dornocoracao_limpo.groupby(['Região', 'Q06306']).size().unstack(fill_value=0)\n",
     "\n",
     "# Criar o gráfico de barras empilhadas com valores absolutos\n",
@@ -321,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
