--- a/Tabelas/tableone.ipynb
+++ b/Tabelas/tableone.ipynb
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "3145d4e2",
    "metadata": {},
    "outputs": [
@@ -942,6 +942,17 @@
       "{i}, mean (SD / min / max) {l}\n",
       "{i}, mean (SD / min / max) {l}\n",
       "{i}, mean (SD / min / max) {l}\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
