Remoção do Relatorio

--- a/Gráficos/Barras/Dor no Coração por Região e Estado.ipynb
+++ b/Gráficos/Barras/Dor no Coração por Região e Estado.ipynb
@@ -2,7 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -38,10 +49,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import os\n",
-    "\n",
     "# Selecionar colunas específicas\n",
     "colunas_selecionadas = ['V0001', 'Q06306']\n",
     "\n",
@@ -58,8 +65,15 @@
     "\n",
     "# Verificar os dados após a limpeza\n",
     "print(dornocoracao_limpo['Q06306'].unique())\n",
-    "print(dornocoracao_limpo.head())\n",
-    "\n",
+    "print(dornocoracao_limpo.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Mapear códigos de estado para nomes\n",
     "mapeamento_estados = {\n",
     "    11: 'Rondônia',\n",
@@ -120,7 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ESTADO"
+    "### ESTADO"
    ]
   },
   {
@@ -252,7 +266,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# REGIÃO"
+    "### REGIÃO"
    ]
   },
   {
