--- a/Gráficos/Segmentos/Dor no coração por região e por idade.ipynb
+++ b/Gráficos/Segmentos/Dor no coração por região e por idade.ipynb
@@ -2,7 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "from scipy.stats import gaussian_kde\n",
+    "import seaborn as sns\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -38,13 +52,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "from scipy.stats import gaussian_kde\n",
-    "import seaborn as sns\n",
-    "import os\n",
-    "\n",
     "# Selecionar colunas específicas\n",
     "colunas_selecionadas = ['V0001', 'Q06306', 'Q064']\n",
     "\n",
@@ -62,8 +69,15 @@
     "\n",
     "# Verificar os dados após a limpeza\n",
     "print(dornocoracao_limpo['Q06306'].unique())\n",
-    "print(dornocoracao_limpo.head())\n",
-    "\n",
+    "print(dornocoracao_limpo.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Mapear códigos de estado para nomes\n",
     "mapeamento_estados = {\n",
     "    11: 'Rondônia',\n",
@@ -118,6 +132,13 @@
     "\n",
     "# Filtrar apenas pessoas com doença do coração\n",
     "doentes_coracao = dornocoracao_limpo[dornocoracao_limpo['Q06306'] == 1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SEGMENTADO NORMAL"
    ]
   },
   {
@@ -242,6 +263,13 @@
     "\n",
     "# Mostrar o gráfico na tela\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SEGMENTADO COM DESVIOS PADRÕES DEMARCADOS"
    ]
   },
   {
