Usecols e Mudança dos caminhos para a base

--- a/Gráficos/Barras/Dor no Coração por Região e Estado.ipynb
+++ b/Gráficos/Barras/Dor no Coração por Região e Estado.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,9 +13,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:5: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "<>:5: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "C:\\Users\\llays\\AppData\\Local\\Temp\\ipykernel_18916\\1805288692.py:5: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "  df = pd.read_csv('..\\..\\Bases\\Originais\\pns2019.csv', usecols=colunas_selecionadas)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -28,24 +38,6 @@
       "18     11     2.0\n",
       "19     11     2.0\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\llays\\AppData\\Local\\Temp\\ipykernel_8576\\3015490804.py:64: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  dornocoracao_limpo['V0001'] = dornocoracao_limpo['V0001'].map(mapeamento_estados)\n",
-      "C:\\Users\\llays\\AppData\\Local\\Temp\\ipykernel_8576\\3015490804.py:73: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  dornocoracao_limpo['Região'] = dornocoracao_limpo['V0001'].apply(estado_para_regiao)\n"
-     ]
     }
    ],
    "source": [
@@ -53,7 +45,7 @@
     "colunas_selecionadas = ['V0001', 'Q06306']\n",
     "\n",
     "# Carregar o arquivo CSV\n",
-    "df = pd.read_csv(r'C:\\Users\\llays\\OneDrive\\Documentos\\GitHub\\DoencasCardiacas\\PNS2019\\pns2019.csv', usecols=colunas_selecionadas)\n",
+    "df = pd.read_csv('..\\..\\Bases\\Originais\\pns2019.csv', usecols=colunas_selecionadas)\n",
     "\n",
     "dornocoracao = df[colunas_selecionadas]\n",
     "\n",
@@ -70,9 +62,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\llays\\AppData\\Local\\Temp\\ipykernel_18916\\2645103749.py:42: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  dornocoracao_limpo['V0001'] = dornocoracao_limpo['V0001'].map(mapeamento_estados)\n",
+      "C:\\Users\\llays\\AppData\\Local\\Temp\\ipykernel_18916\\2645103749.py:51: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  dornocoracao_limpo['Região'] = dornocoracao_limpo['V0001'].apply(estado_para_regiao)\n"
+     ]
+    }
+   ],
    "source": [
     "# Mapear códigos de estado para nomes\n",
     "mapeamento_estados = {\n",
@@ -139,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
