--- a/Códigos/tableone.ipynb
+++ b/Códigos/tableone.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "id": "b3a3fcdb",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 2,
    "id": "85dd2f8c",
    "metadata": {},
    "outputs": [],
@@ -27,17 +27,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 6,
    "id": "aa352eb4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:1: SyntaxWarning: invalid escape sequence '\\B'\n",
+      "<>:1: SyntaxWarning: invalid escape sequence '\\B'\n",
+      "C:\\Users\\llays\\AppData\\Local\\Temp\\ipykernel_14408\\820377438.py:1: SyntaxWarning: invalid escape sequence '\\B'\n",
+      "  data = pd.read_csv('..\\Bases\\Criados\\\\base_doencas_cardiacas.csv')\n"
+     ]
+    }
+   ],
    "source": [
-    "data = pd.read_csv('base_doencas_cardiacas.csv')"
+    "data = pd.read_csv('..\\Bases\\Criados\\\\base_doencas_cardiacas.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": null,
    "id": "286c9481",
    "metadata": {},
    "outputs": [],
@@ -59,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": null,
    "id": "b715d4e8",
    "metadata": {},
    "outputs": [
@@ -227,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": null,
    "id": "3b6179bf",
    "metadata": {},
    "outputs": [
@@ -770,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": null,
    "id": "f33b615a",
    "metadata": {},
    "outputs": [
@@ -1299,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "3145d4e2",
    "metadata": {},
    "outputs": [
