--- a/Códigos/faltantes.ipynb
+++ b/Códigos/faltantes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 420,
+   "execution_count": 858,
    "id": "5b0ed06f",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 421,
+   "execution_count": 859,
    "id": "44e83fa0",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 422,
+   "execution_count": 860,
    "id": "41add216",
    "metadata": {},
    "outputs": [
@@ -34,19 +34,18 @@
        "       'E005', 'E006011', 'E008', 'E010010', 'E011', 'E014011', 'E01601',\n",
        "       'E01603', 'E01605', 'E01602', 'E01604', 'E017', 'E01801', 'E01802',\n",
        "       'E01804', 'E019', 'G060', 'G062', 'I00103', 'I001031', 'I006', 'I004',\n",
-       "       'I00401', 'I00402', 'I00403', 'I012', 'J00402', 'J00404', 'J00801',\n",
-       "       'M00203', 'M00302', 'M011011', 'M011021', 'M011051', 'M011071', 'N004',\n",
-       "       'N005', 'N008', 'P00103', 'P00104', 'P00403', 'P00404', 'P01001',\n",
-       "       'P02801', 'P029', 'P035', 'P03701', 'P03702', 'P051', 'P052', 'P053',\n",
-       "       'P05401', 'P05404', 'P05407', 'P05410', 'P05413', 'P05416', 'P05419',\n",
-       "       'P05901', 'P05902', 'P05903', 'P05904', 'Q00201', 'Q03001', 'Q060',\n",
-       "       'Q06307', 'Q06308', 'Q06309', 'Q06310', 'Q06311', 'Q064', 'Q06506',\n",
-       "       'Q06507', 'Q06508', 'Q06509', 'Q06601', 'Q067', 'H002', 'H003', 'H004',\n",
-       "       'H010'],\n",
+       "       'I00401', 'I00402', 'I00403', 'J00402', 'J00404', 'J00801', 'M00203',\n",
+       "       'M011011', 'M011021', 'M011051', 'M011071', 'N004', 'N005', 'N008',\n",
+       "       'P00103', 'P00104', 'P00403', 'P00404', 'P01001', 'P02801', 'P029',\n",
+       "       'P035', 'P03701', 'P03702', 'P051', 'P052', 'P053', 'P05401', 'P05404',\n",
+       "       'P05407', 'P05410', 'P05413', 'P05416', 'P05419', 'P05901', 'P05902',\n",
+       "       'P05903', 'P05904', 'Q00201', 'Q03001', 'Q060', 'Q06307', 'Q06308',\n",
+       "       'Q06309', 'Q06310', 'Q06311', 'Q064', 'Q06506', 'Q06507', 'Q06508',\n",
+       "       'Q06509', 'Q06601', 'Q067', 'H002', 'H003', 'H004', 'H010'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 422,
+     "execution_count": 860,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,17 +56,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 423,
+   "execution_count": 861,
    "id": "243355c9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.int64(89)"
+       "np.int64(87)"
       ]
      },
-     "execution_count": 423,
+     "execution_count": 861,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 424,
+   "execution_count": 862,
    "id": "996f9ae3",
    "metadata": {},
    "outputs": [
@@ -135,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 425,
+   "execution_count": 863,
    "id": "f6b8b4c6",
    "metadata": {},
    "outputs": [
@@ -201,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 426,
+   "execution_count": 864,
    "id": "69ae81c0",
    "metadata": {},
    "outputs": [],
@@ -229,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": 865,
    "id": "da18f04c",
    "metadata": {},
    "outputs": [
@@ -270,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 428,
+   "execution_count": 866,
    "id": "dec6a0b1",
    "metadata": {},
    "outputs": [],
@@ -310,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 429,
+   "execution_count": 867,
    "id": "bb60e963",
    "metadata": {},
    "outputs": [
@@ -356,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 430,
+   "execution_count": 868,
    "id": "3b189ab1",
    "metadata": {},
    "outputs": [
@@ -374,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 431,
+   "execution_count": 869,
    "id": "de77bc94",
    "metadata": {},
    "outputs": [],
@@ -396,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 432,
+   "execution_count": 870,
    "id": "d5706252",
    "metadata": {},
    "outputs": [
@@ -433,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 433,
+   "execution_count": 871,
    "id": "5a8d219f",
    "metadata": {},
    "outputs": [
@@ -453,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 434,
+   "execution_count": 872,
    "id": "9a6fd61b",
    "metadata": {},
    "outputs": [],
@@ -464,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 435,
+   "execution_count": 873,
    "id": "96e0c383",
    "metadata": {},
    "outputs": [
@@ -484,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 436,
+   "execution_count": 874,
    "id": "c1817259",
    "metadata": {},
    "outputs": [
@@ -514,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 437,
+   "execution_count": 875,
    "id": "43423eb8",
    "metadata": {},
    "outputs": [
@@ -544,7 +543,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "0baebab5-59d5-499f-9c51-2826b82a57cc",
+       "ref": "4e95adf4-8bea-49ea-ac25-94c697968f4c",
        "rows": [
         [
          "0",
@@ -965,7 +964,7 @@
        "[12018 rows x 3 columns]"
       ]
      },
-     "execution_count": 437,
+     "execution_count": 875,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -977,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 438,
+   "execution_count": 876,
    "id": "d8ceb9bc",
    "metadata": {},
    "outputs": [],
@@ -1008,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 439,
+   "execution_count": 877,
    "id": "207d2c19",
    "metadata": {},
    "outputs": [
@@ -1053,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 440,
+   "execution_count": 878,
    "id": "58b8476f",
    "metadata": {},
    "outputs": [],
@@ -1080,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 441,
+   "execution_count": 879,
    "id": "34ede46b",
    "metadata": {},
    "outputs": [
@@ -1131,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 442,
+   "execution_count": 880,
    "id": "bb952217",
    "metadata": {},
    "outputs": [],
@@ -1153,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 443,
+   "execution_count": 881,
    "id": "129d46bd",
    "metadata": {},
    "outputs": [
@@ -1195,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 444,
+   "execution_count": 882,
    "id": "4934a2a4",
    "metadata": {},
    "outputs": [],
@@ -1215,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 445,
+   "execution_count": 883,
    "id": "1816ddb0",
    "metadata": {},
    "outputs": [
@@ -1278,12 +1277,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 446,
+   "execution_count": 884,
    "id": "c6a04f56",
    "metadata": {},
    "outputs": [],
    "source": [
     "df = df.drop(columns=['I00102', 'I00401', 'I00402', 'I00403', 'I00103', 'I001031'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce1c4fdd",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 885,
+   "id": "75067eb0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.loc[df['J002'] == 2, 'J00402'] = 0\n",
+    "df.loc[df['J002'] == 2, 'J00404'] = 0\n",
+    "df.loc[df['J002'] == 2, 'J00801'] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 886,
+   "id": "db195951",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "0\n",
+      "428\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df['J00402'].isna().sum())\n",
+    "print(df['J00404'].isna().sum())\n",
+    "print(df['J00801'].isna().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 887,
+   "id": "f36d3100",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       J002  J00801\n",
+      "103     1.0     NaN\n",
+      "250     1.0     NaN\n",
+      "293     1.0     NaN\n",
+      "341     1.0     NaN\n",
+      "424     1.0     NaN\n",
+      "...     ...     ...\n",
+      "23978   1.0     NaN\n",
+      "24265   1.0     NaN\n",
+      "24270   1.0     NaN\n",
+      "24378   1.0     NaN\n",
+      "24383   1.0     NaN\n",
+      "\n",
+      "[428 rows x 2 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "filtro = df['J00801'].isna()\n",
+    "resultado = df[filtro][['J002', 'J00801']]\n",
+    "print(resultado)"
    ]
   },
   {
@@ -1302,7 +1374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 447,
+   "execution_count": 888,
    "id": "24a0916f",
    "metadata": {},
    "outputs": [
@@ -1341,7 +1413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 448,
+   "execution_count": 889,
    "id": "3da027f0",
    "metadata": {},
    "outputs": [
@@ -1380,7 +1452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 449,
+   "execution_count": 890,
    "id": "c572c83a",
    "metadata": {},
    "outputs": [
@@ -1419,7 +1491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 450,
+   "execution_count": 891,
    "id": "ef16f3c1",
    "metadata": {},
    "outputs": [
@@ -1458,7 +1530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 451,
+   "execution_count": 892,
    "id": "dc1f8506",
    "metadata": {},
    "outputs": [],
@@ -1486,7 +1558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 452,
+   "execution_count": 893,
    "id": "75b2e3b0",
    "metadata": {},
    "outputs": [
@@ -1533,7 +1605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 453,
+   "execution_count": 894,
    "id": "34874aa7",
    "metadata": {},
    "outputs": [],
@@ -1556,7 +1628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 454,
+   "execution_count": 895,
    "id": "d08176ed",
    "metadata": {},
    "outputs": [
@@ -1576,7 +1648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 455,
+   "execution_count": 896,
    "id": "a163a8da",
    "metadata": {},
    "outputs": [
@@ -1589,7 +1661,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 455,
+     "execution_count": 896,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1600,7 +1672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 456,
+   "execution_count": 897,
    "id": "fab2da87",
    "metadata": {},
    "outputs": [
@@ -1665,7 +1737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 457,
+   "execution_count": 898,
    "id": "07eb4049",
    "metadata": {},
    "outputs": [],
@@ -1714,7 +1786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 458,
+   "execution_count": 899,
    "id": "30fbdf99",
    "metadata": {},
    "outputs": [
@@ -1791,7 +1863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 459,
+   "execution_count": 900,
    "id": "390108a0",
    "metadata": {},
    "outputs": [
@@ -1870,7 +1942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 460,
+   "execution_count": 901,
    "id": "f8e65330",
    "metadata": {},
    "outputs": [
@@ -1937,7 +2009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 461,
+   "execution_count": 902,
    "id": "d95bcb51",
    "metadata": {},
    "outputs": [],
@@ -1947,29 +2019,121 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 462,
-   "id": "a17e0fde",
+   "cell_type": "markdown",
+   "id": "fcbeb243",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "np.int64(4)"
-      ]
-     },
-     "execution_count": 462,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "df['I012'].isna().sum()"
+    "### Atributos sobre doenças cardíacas (módulo Q)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 463,
+   "execution_count": 903,
+   "id": "27976ee0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.loc[df['Q00101'] == 6, 'Q00201'] = 2 #diagnóstico de hipertensão\n",
+    "df.loc[df['Q02901'] == 6, 'Q03001'] = 2 #diagnóstico de diabetes\n",
+    "df.loc[df['Q05901'] == 6, 'Q060'] = 2 #diagnóstico de colesterol alto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 904,
+   "id": "a8b853b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "0\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df['Q00201'].isna().sum())\n",
+    "print(df['Q03001'].isna().sum())\n",
+    "print(df['Q060'].isna().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b717c76e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop(columns=['Q00101', 'Q02901', 'Q05901'])    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 906,
+   "id": "bb822a0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.loc[df['Q06306'] == 2, 'Q06307'] = 0\n",
+    "df.loc[df['Q06306'] == 2, 'Q06308'] = 0\n",
+    "df.loc[df['Q06306'] == 2, 'Q06309'] = 0\n",
+    "df.loc[df['Q06306'] == 2, 'Q06310'] = 0\n",
+    "df.loc[df['Q06306'] == 2, 'Q06311'] = 0\n",
+    "df.loc[df['Q06306'] == 2, 'Q064'] = 0\n",
+    "df.loc[df['Q06306'] == 2, 'Q06506'] = 0\n",
+    "df.loc[df['Q06306'] == 2, 'Q06507'] = 0\n",
+    "df.loc[df['Q06306'] == 2, 'Q06508'] = 0\n",
+    "df.loc[df['Q06306'] == 2, 'Q06509'] = 0\n",
+    "df.loc[df['Q06306'] == 2, 'Q06601'] = 0\n",
+    "df.loc[df['Q06306'] == 2, 'Q067'] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 907,
+   "id": "7a37bb30",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df['Q06307'].isna().sum())\n",
+    "print(df['Q06308'].isna().sum())\n",
+    "print(df['Q06309'].isna().sum())\n",
+    "print(df['Q06310'].isna().sum())\n",
+    "print(df['Q06311'].isna().sum())\n",
+    "print(df['Q064'].isna().sum())\n",
+    "print(df['Q06506'].isna().sum())\n",
+    "print(df['Q06507'].isna().sum())\n",
+    "print(df['Q06508'].isna().sum())\n",
+    "print(df['Q06509'].isna().sum())\n",
+    "print(df['Q06601'].isna().sum())\n",
+    "print(df['Q067'].isna().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 909,
    "id": "85d5e92f",
    "metadata": {},
    "outputs": [],
@@ -1979,33 +2143,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 464,
+   "execution_count": 910,
    "id": "76d111e7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('base_completa.csv', index=False)"
+    "df.to_csv('base_preenchida.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 465,
+   "execution_count": 911,
    "id": "342b24d8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['D01301', 'D01303', 'E005', 'E006011', 'E008', 'E010010', 'I012',\n",
-       "       'J00402', 'J00404', 'J00801', 'M00203', 'M00302', 'P00103', 'P00104',\n",
-       "       'P00403', 'P00404', 'P01001', 'P02801', 'P029', 'Q00201', 'Q03001',\n",
-       "       'Q060', 'Q06307', 'Q06308', 'Q06309', 'Q06310', 'Q06311', 'Q064',\n",
-       "       'Q06506', 'Q06507', 'Q06508', 'Q06509', 'Q06601', 'Q067', 'H002',\n",
-       "       'H003', 'H004', 'H010', 'Escolaridade', 'Dor_peito', 'Faixa_ex_fisico'],\n",
+       "Index(['D01301', 'D01303', 'E005', 'E006011', 'E008', 'E010010', 'J00801',\n",
+       "       'M00203', 'P00103', 'P00104', 'P00403', 'P00404', 'P01001', 'P02801',\n",
+       "       'P029', 'H002', 'H003', 'H004', 'H010', 'Escolaridade', 'Dor_peito',\n",
+       "       'Faixa_ex_fisico'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 465,
+     "execution_count": 911,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2016,17 +2178,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 466,
+   "execution_count": 912,
    "id": "5343a183",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.int64(41)"
+       "np.int64(22)"
       ]
      },
-     "execution_count": 466,
+     "execution_count": 912,
      "metadata": {},
      "output_type": "execute_result"
     }
