Mudei os links do csv

--- a/Códigos/trabalhoPNS.ipynb
+++ b/Códigos/trabalhoPNS.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "5cfcc85c",
    "metadata": {},
    "outputs": [
@@ -1710,7 +1710,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('C:\\\\Users\\\\bkser\\\\OneDrive\\\\Área de Trabalho\\\\Trabalho_PNS\\\\MD_DoencasCardiacas\\\\Bases\\\\Originais\\\\pns2019.csv', usecols=colunas)\n",
+    "df = pd.read_csv('..\\Bases\\Originais\\\\pns2019.csv', usecols=colunas)\n",
     "df.head()"
    ]
   },
@@ -1783,12 +1783,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "bb7fde0b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_filtrado.to_csv('base_doencas_cardiacas.csv', index=False)"
+    "df_filtrado.to_csv('..\\Bases\\Criadas\\\\base_doencas_cardiacas.csv', index=False)"
    ]
   },
   {
